# Aerocast

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  dvc.yaml  index.html  pyproject.toml  railway.json
.dvc/: config
.github/workflows/: ci.yml  docker.yml
airflow/: Dockerfile  docker-compose.yml
airflow/dags/: drift_dag.py  ingestion_dag.py  retraining_dag.py
api/: Dockerfile  main.py
api/routes/: health.py  predict.py
monitoring/grafana/dashboards/: aerocast.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
notebooks/: baseline.ipynb  eda.ipynb
reports/: baseline_data_quality.html  baseline_drift.html
scripts/: ingest.py  simulate_drift.py  smoke_test.py
src/aerocast/: config.py  notify.py
src/aerocast/data/: client.py  pipeline.py  preprocess.py  validate.py
src/aerocast/drift/: __init__.py  detector.py
src/aerocast/models/: __init__.py  lgbm.py  mlp.py  registry.py  train.py
src/aerocast/serving/: __init__.py  loader.py
tests/unit/: test_api.py  test_client.py  test_dags.py  test_drift.py  test_models.py  test_monitoring.py  test_preprocess.py
