[tool.poetry]
name = "aerocast"
version = "0.1.0"
description = "Automated AQI forecasting pipeline with drift detection, retraining, and CD."
authors = ["Sagnik Taraphdar <code.sagnik@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python              = ">=3.12,<3.13"
fastapi             = "^0.111.0"
uvicorn             = {extras = ["standard"], version = "^0.30.0"}
pandas              = "^2.2.0"
numpy               = "^1.26.0"
requests            = "^2.32.0"
python-dotenv       = "^1.0.0"
pydantic            = "^2.7.0"
pydantic-settings   = "^2.3.0"
prometheus-client   = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest          = "^8.2.0"
pytest-cov      = "^5.0.0"
pytest-asyncio  = "^0.23.0"
httpx           = "^0.27.0"
black           = "^24.4.0"
isort           = "^5.13.0"
flake8          = "^7.1.0"
pre-commit      = "^3.7.0"

[tool.poetry.group.train.dependencies]
lightgbm            = "^4.3.0"
scikit-learn        = "^1.5.0"
wandb               = "^0.17.0"
evidently           = "^0.4.0"
great-expectations  = "^0.18.0"
dvc                 = {extras = ["s3"], version = "^3.51.0"}
dagshub             = "^0.3.0"
apache-airflow      = "^2.11.0"
torch = {version = "^2.12.0", source = "pytorch"}
lightning = "^2.6.5"


[tool.poetry.group.eda.dependencies]
jupyterlab  = "^4.2.0"
plotly      = ">=5.22.0"
nbformat    = "^5.10.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[tool.black]
line-length    = 88
target-version = ["py312"]

[tool.isort]
profile     = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
pythonpath   = ["src"]
addopts      = "--cov=src/aerocast --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
omit = [
    "src/aerocast/data/validate.py",
    "src/aerocast/data/pipeline.py",
    "src/aerocast/notify.py",
]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
